--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,16 @@
 # cheekymonkey/create_level.py: 5
 # cheekymonkey/physics_utility.py: 1
 # cheekymonkey/player_utility.py: 1
-arcade == 2.3.15
+arcade == 2.5.2
 
 # cheekymonkey/k8s_kill_pod.py: 1
 kubernetes == 11.0.0
 
 # cheekymonkey/cheekymonkey.py: 6
-pyglet == 1.5.3
+# pyglet <2 && >=1.5.11
 
 # cheekymonkey/cheekymonkey.py: 7
 # cheekymonkey/create_level.py: 4
 # cheekymonkey/physics_utility.py: 8
 # cheekymonkey/player_utility.py: 28
-pymunk == 6.0.0
+pymunk == 5.7
